--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
+title: "Reproducible Research: Peer Assessment 1 - Steve Ruttenberg"
 output: 
   html_document:
     keep_md: true
@@ -8,18 +8,112 @@ output:
 
 ## Loading and preprocessing the data
 
+Load package to use 'tibbles' and work in the 'tidyverse' (see: "http://r4ds.had.co.nz/tibbles.html")
+```{r}
+library(tidyverse, quietly = TRUE, warn.conflicts = FALSE)
+```
+
+Unzipping, reading in data and viewing:
+```{r}
+unzip("activity.zip")
+activity <- as_tibble(read.csv("activity.csv", stringsAsFactors = FALSE))
+activity
+```
 
 
 ## What is mean total number of steps taken per day?
 
+Calculate the total number of steps taken per day:
+```{r}
+steps_per_day <- activity %>% group_by(date) %>% summarise(daily_steps = sum(steps))
+steps_per_day
+```
 
+Make a histogram of the total number of steps teken each day:
+```{r}
+with(steps_per_day, hist(x = daily_steps))
+```
+
+Calculate and report the mean and median of the total number of steps taken per day:
+```{r}
+summary(steps_per_day$daily_steps)
+```
+As shown above; median steps per day is 10760 and mean steps per day is 10770.
 
 ## What is the average daily activity pattern?
 
+Make a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis):
+```{r}
+steps_by_interval <- activity %>% group_by(interval) %>% summarise(interval_steps = mean(steps, na.rm = TRUE))
+with(steps_by_interval, plot(x = interval, y = interval_steps, type = "l"))
+title(main = "Average Number of Steps Taken per Interval", sub = "Averaged Across All Days")
+```
 
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+steps_by_interval %>% filter(interval_steps == max(interval_steps))
+```
+It seems interval '835' contains the maximum average number of steps across all days. This visually checks out with the highest peak of the previous graph.
 
 ## Imputing missing values
 
+Calculate and report the total number of missing values in the dataset:
+```{r}
+sum(is.na(activity))
+sum(is.na(activity$steps))
+```
+There are 2304 observations out of a total of 17568 with 'NA' values. We see the 'NA' values are only in the 'steps' variable.
 
+The strategy for filling in all of the missing values in the dataset (which are all in the 'steps' column) will be to replace the 'NA' value with the corresponding mean steps for that interval across all days. This should mitigate bias as intended for the subsequent analysis.
+
+Fill missing values in dataset as per strategy outlined above:
+```{r}
+fill_vals <- activity %>% filter(is.na(activity$steps) == 1) %>% inner_join(steps_by_interval, by = "interval") %>%
+        select(interval_steps, date, interval)
+activity_almost_filled <- activity %>% left_join(fill_vals, by = c("date", "interval"))
+missing_vals <- is.na(activity_almost_filled$steps)
+activity_almost_filled[missing_vals, "steps"] <- activity_almost_filled[missing_vals, "interval_steps"]
+activity_filled <- activity_almost_filled %>% select(steps, date, interval)
+activity_filled
+```
+
+With filled dataset, make a histogram of the total number of steps taken each day:
+```{r}
+steps_per_day_filled <- activity_filled %>% group_by(date) %>% summarise(daily_steps = sum(steps))
+with(steps_per_day_filled, hist(x = daily_steps))
+title(sub = "with 'NA' values filled")
+```
+
+With the filled data, calculate and report the mean and median total number of steps taken per day:
+```{r}
+summary(steps_per_day_filled$daily_steps)
+```
+As shown above; median steps per day is 10770 and mean steps per day is also 10770 for the filed data set.
+
+These values do not differ meaningfully (or at all for the mean) from the non-filled data set values. This implies that the method chosen for imputing missing values did not have a meaningful effect on the distribution of the steps across time intervals.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+Create a new factor variable in the dataset with two levels - 'weekday' and 'weekend' indicating whether a given date is a weekday or weekend day:
+```{r}
+library(lubridate)
+weekdays <- tibble(day = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"),
+                   category = c(rep("weekday", 5), rep("weekend", 2)))
+data_w_day <- activity_filled %>% mutate(day = as.character(wday(activity_filled$date, label = TRUE, abbr = FALSE)))
+data_w_day_status <- left_join(data_w_day, weekdays, by = "day") %>% mutate(week_portion = as.factor(category)) %>%
+                select(steps, date, interval, week_portion)
+data_w_day_status
+```
+
+Make a panel plot containing a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis):
+```{r}
+weekend <- data_w_day_status %>% filter(week_portion == "weekend") %>% group_by(interval) %>%
+        summarise(avg_steps = mean(steps))
+weekday <- data_w_day_status %>% filter(week_portion == "weekday") %>% group_by(interval) %>%
+        summarise(avg_steps = mean(steps))
+par(mfrow = c(2,1))
+with(weekend, plot(x = interval, y = avg_steps, type = "l"))
+title(main = "Weekend Avg Steps Per Interval")
+with(weekday, plot(x = interval, y = avg_steps, type = "l"))
+title(main = "Weekday Avg Steps Per Interval")
+```
